--- a/CSCI150_Project_Pages/LoginPage.css
+++ b/CSCI150_Project_Pages/LoginPage.css
@@ -1,17 +1,58 @@
-body {
-    background-color: #1c1c1c;
+* {
+    font-family: Arial;
 }
 
-.pageContent {
-    margin: 0 auto;
-    width: 768px;
+body {
+    background-color: #1c1c1c; /* black background */
 }
+
+div.mainHolder {
+    background-color: #4a4a4a; /* light grey background */
+    padding-bottom: 50px;
+}
+
+img#logoText {
+    /* based on a 2:1 image ratio*/
+    width:150px;
+    height:75px;
+    display: fixed;
+    margin-left: 0;
+}
+
+img#logoImage{
+    /* based on a 4:3 image ratio*/
+    width:100px;
+    height:75px;
+    display: fixed;
+    float: right;
+}
+
+div.foreground {
+    background-color: #363636; /* dark grey background */
+    margin: 0 auto;
+    width: 960px;
+}
+
+div.pageContent {
+    padding: 50px;
+}
+
+
 
 form {
     background-color: #b3b3b3;
     border: 1px solid #8a8a8a;
     width: 400px;
-    margin: 0 auto;
+    margin: auto;
+    padding: 5px;
+}
+
+div.newUser {
+    background-color: #b3b3b3;
+    border: 1px solid #8a8a8a;
+    width: 400px;
+    margin: 20px auto;
+    padding: 10px 5px 10px 5px;
 }
 
 input[type=text], input[type=password] {
@@ -21,7 +62,6 @@ input[type=text], input[type=password] {
     display: inline-block;
     border: 1px solid #8a8a8a;
     box-sizing: border-box;
-    font-family: Arial;
     background-color: rgba(100, 140, 190, 0.2); /*hexcode is #648DBE*/
     
 }
@@ -33,13 +73,10 @@ input[type=submit] {
     padding: 16px 0 16px 0;
     border: 0px;
     font-weight: bold;
-    font-family: Arial;
+    
 }
 
 
-.foreground {
-    background-color: #363636;
-}
 
 .topBar {
     display: flex;
