--- a/CSCI150_Project_Pages/mainStyleSheet.css
+++ b/CSCI150_Project_Pages/mainStyleSheet.css
@@ -206,4 +206,14 @@ div.newUser {
         margin: 20px auto;
         padding: 10px 5px 10px 5px;
     }
+	
+	table, th, td{
+		border: 1px solid black;
+		padding: 1px solid black;
+	}
+	
+	.center{
+		margin-left:auto;
+		margin-right:auto;
+	}
 }
