Update ForumPage and Style
Added some html menus to the ForumPage (no JS yet) and the corresponding CSS

--- a/CSCI150_Project_Pages/mainStyleSheet.css
+++ b/CSCI150_Project_Pages/mainStyleSheet.css
@@ -27,7 +27,7 @@ img.logoImage{
 }
 
 .navBar {
-    background-color: #DB0032;
+    background-color: #1E9AFF;
     width: 100%;
     height: auto;
     overflow: auto;
@@ -44,7 +44,7 @@ img.logoImage{
 }
 
 .navBar a:hover {
-    background-color: #910323; /* on hover color #910323. DB0032 */
+    background-color: #1E79BE; /* on hover color #1E9AFF. 1E9AFF */
 }
 
 div.pageContent {
@@ -112,6 +112,17 @@ div.newsFeed {
     background-color: #D1D1D1;
     border: 1px solid black;
     border-collapse: collapse;
+}
+
+div.tagSearch {
+    padding: 20px 10px;
+}
+
+select.tagList {
+    display: block;
+    margin: 0px auto;
+    width: 100%;
+    border: 1px solid black;
 }
 
 form {
@@ -190,7 +201,7 @@ div.interactionMenu {
     }
     
     .navBar {
-        background-color: #DB0032;
+        background-color: #1E9AFF;
         width: 100%;
         height: auto;
         overflow: auto;
@@ -212,7 +223,7 @@ div.interactionMenu {
     }
 
     .navBar a:hover{
-        background-color: #910323; /* on hover color #910323. DB0032 */
+        background-color: #1E79BE; /* on hover color #1E79BE. 1E9AFF */
     }
     
     div.homePageContent {
@@ -276,6 +287,17 @@ div.interactionMenu {
         background-color: #D1D1D1;
         border: 1px solid black;
         border-collapse: collapse;
+    }
+    
+    div.tagSearch {
+        padding: 25px;
+    }
+
+    select.tagList {
+        display: block;
+        margin: 0px auto;
+        width: 50%;
+        border: 1px solid black;
     }
     
     form {
