Converted HTML pages to PHP and added password hashing
Needed to make files into PHP in order to verify that user is logged in to be able to view contents of site.

--- a/CSCI150_Project_Pages/mainStyleSheet.css
+++ b/CSCI150_Project_Pages/mainStyleSheet.css
@@ -27,7 +27,7 @@ img.logoImage{
 }
 
 .navBar {
-    background-color: #1E9AFF;
+    background-color: #DB0032;
     width: 100%;
     height: auto;
     overflow: auto;
@@ -44,7 +44,12 @@ img.logoImage{
 }
 
 .navBar a:hover {
-    background-color: #1E79BE; /* on hover color #1E9AFF. 1E9AFF */
+    background-color: #910323; /* on hover color #910323. DB0032 */
+}
+
+div.profilePage {
+    padding: 20px;
+    display: block;
 }
 
 div.pageContent {
@@ -112,17 +117,6 @@ div.newsFeed {
     background-color: #D1D1D1;
     border: 1px solid black;
     border-collapse: collapse;
-}
-
-div.tagSearch {
-    padding: 20px 10px;
-}
-
-select.tagList {
-    display: block;
-    margin: 0px auto;
-    width: 100%;
-    border: 1px solid black;
 }
 
 form {
@@ -201,7 +195,7 @@ div.interactionMenu {
     }
     
     .navBar {
-        background-color: #1E9AFF;
+        background-color: #DB0032;
         width: 100%;
         height: auto;
         overflow: auto;
@@ -223,7 +217,7 @@ div.interactionMenu {
     }
 
     .navBar a:hover{
-        background-color: #1E79BE; /* on hover color #1E79BE. 1E9AFF */
+        background-color: #910323; /* on hover color #910323. DB0032 */
     }
     
     div.homePageContent {
@@ -289,17 +283,6 @@ div.interactionMenu {
         border-collapse: collapse;
     }
     
-    div.tagSearch {
-        padding: 25px;
-    }
-
-    select.tagList {
-        display: block;
-        margin: 0px auto;
-        width: 50%;
-        border: 1px solid black;
-    }
-    
     form {
         background-color: #b3b3b3;
         border: 1px solid #8a8a8a;
@@ -355,5 +338,4 @@ div.interactionMenu {
 		margin-left:auto;
 		margin-right:auto;
 	}
-	
 }
