--- a/CSCI150_Project_Pages/mainStyleSheet.css
+++ b/CSCI150_Project_Pages/mainStyleSheet.css
@@ -27,7 +27,7 @@ img.logoImage{
 }
 
 .navBar {
-    background-color: #DB0032;
+    background-color: #1E9AFF;
     width: 100%;
     height: auto;
     overflow: auto;
@@ -44,7 +44,7 @@ img.logoImage{
 }
 
 .navBar a:hover {
-    background-color: #910323; /* on hover color #910323. DB0032 */
+    background-color: #1E79BE; /* on hover color #1E9AFF. 1E9AFF */
 }
 
 div.pageContent {
@@ -112,6 +112,17 @@ div.newsFeed {
     background-color: #D1D1D1;
     border: 1px solid black;
     border-collapse: collapse;
+}
+
+div.tagSearch {
+    padding: 20px 10px;
+}
+
+select.tagList {
+    display: block;
+    margin: 0px auto;
+    width: 100%;
+    border: 1px solid black;
 }
 
 form {
@@ -190,7 +201,7 @@ div.interactionMenu {
     }
     
     .navBar {
-        background-color: #DB0032;
+        background-color: #1E9AFF;
         width: 100%;
         height: auto;
         overflow: auto;
@@ -212,7 +223,7 @@ div.interactionMenu {
     }
 
     .navBar a:hover{
-        background-color: #910323; /* on hover color #910323. DB0032 */
+        background-color: #1E79BE; /* on hover color #1E79BE. 1E9AFF */
     }
     
     div.homePageContent {
@@ -278,6 +289,17 @@ div.interactionMenu {
         border-collapse: collapse;
     }
     
+    div.tagSearch {
+        padding: 25px;
+    }
+
+    select.tagList {
+        display: block;
+        margin: 0px auto;
+        width: 50%;
+        border: 1px solid black;
+    }
+    
     form {
         background-color: #b3b3b3;
         border: 1px solid #8a8a8a;
@@ -333,4 +355,103 @@ div.interactionMenu {
 		margin-left:auto;
 		margin-right:auto;
 	}
+	
+    div.listingContainer {
+        margin: 0 auto;
+        display: flex;
+        border: 1px solid black;
+    }
+    
+    .listingImage {
+        display: block;
+        max-width: 100%;
+        max-height: 50vh;
+        height: auto;
+        margin: auto;
+    }
+    
+    .listingBody {
+        border-left: 1px solid black;
+        font-size: 18px;
+        padding: 10px;
+        width: 100%;
+    }
+    
+    .listingPoster {
+        border-left: 1px solid black;
+        margin-left: 5px;
+        padding: 0px 5px;
+        display: inline-flex;
+        align-items: center;
+    }
+    
+    .backToListings {
+        margin: 5px;
+        
+    }
+    
+    .listingEntry {
+        display: block;
+        margin-left: 5px;
+        
+        /* This centers the content but not to a left sided margin
+        display: flex;
+        justify-content: center;
+        margin: auto;
+        align-items: center; */
+    }
+    
+    .entry {
+        overflow: hidden;
+        margin-left: 5px;
+    }
+
+    .listingThumbnail {
+        float: left;
+        margin-bottom: 2px;
+        margin-right: 5px;
+        margin-top: 0;
+        margin-left: 0;
+        overflow: hidden;
+        width: 70px;
+    }
+
+    .title {
+        font-size: 20px;
+        margin: 1px;
+    }
+
+    ul.interactionButtons {
+        list-style-type: none;
+        display: block;
+        padding: 1px;
+    }
+    .interactionButtons li {
+        list-style-type: none;
+        display: inline-block;
+        font-size: 12px;
+        border: none;
+        padding: 0px 5px;
+    }
+
+    .postInfo {
+        font-size: 12px;
+        padding-left: 6px;
+    }
+    
+    .pageSwap {
+        margin: 20px 50px;
+    }
+    
+    .prevPage {
+        display: inline-block;
+        float: left;
+        /* margin-left: 50px; */
+    }
+    
+    .nextPage {
+        display: inline-block;
+        float: right;
+        /* margin-right: 50px; */
+    }
 }
