Revert "Merge branch 'FileRename' of https://github.com/CSCI-150-LAB/Team4Repo into FileRename"
This reverts commit 2f22e1fe7a650ba767d55a8c5a7efc0c9950363e, reversing
changes made to 416a6c3d009a568806bf88e4536e0efd4fc2ca08.

--- a/CSCI150_Project_Pages/mainStyleSheet.css
+++ b/CSCI150_Project_Pages/mainStyleSheet.css
@@ -14,10 +14,8 @@ body {
 .logoText {
     /* based on a 2:1 image ratio*/
     display: inline-block;
-    max-width: 324px;
-    max-height: 64px;
-    width: auto;
-    height: auto;
+    width: 20%;
+    height: 75px;
 }
 
 .navbar {
@@ -104,13 +102,11 @@ table, th, td {
 /* Page Elements CSS*/
 
 .logoLogin {
-    /* based on a 5:1 image ratio*/
+    /* based on a 4:3 image ratio*/
     display: block; 
     margin: 10px auto 50px auto;
-    max-width: 810px;
-    max-height: 160px;
-    width: auto;
-    height: auto;
+    width: 50%;
+    height: 10%;
 }
 
 .homePageContent {
