--- a/CSCI150_Project_Pages/mainStyleSheet.css
+++ b/CSCI150_Project_Pages/mainStyleSheet.css
@@ -39,8 +39,6 @@ body {
         text-decoration: none;
 }
 
-
-
 .dropdownContainer {
     float: left;
     overflow: hidden;
@@ -190,10 +188,6 @@ form {
     padding: 20px;
 }
 
-.messageBox{
-    padding: 20px;
-}
-
 .forgotPass {
     padding: 20px 0px 0px 0px;
     font-size: 16px;
@@ -254,6 +248,51 @@ input[type=submit] {
     padding: 0px 5px;
     display: inline-flex;
     align-items: center;
+}
+
+.button1 {
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    background-color: #1E9AFF;
+}
+
+.button2 {
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    background-color: #1154e6;
+}
+
+.messageButton:hover, .cancelButton:hover {
+    background-color: #1E79BE;
+    color: white;
+}
+
+.messageBox{
+    display: none;
+}
+
+input[name="send"] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #d6cccc;
+    box-sizing: border-box;
+    background-color: rgba(192, 200, 209, 0.986); /*hexcode is #648DBE*/
 }
 
 .backToListings {
