Added Wishlist to profile page

--- a/CSCI150_Project_Pages/mainStyleSheet.css
+++ b/CSCI150_Project_Pages/mainStyleSheet.css
@@ -473,3 +473,19 @@ input[type=submit] {
     width: 50%;
     border: 1px solid black;
 }
+
+.wishlistForm{
+    display: inline-block;
+}
+
+
+
+.chatHolder{
+    background: #368dda;
+    margin: 20px;
+    width: 90%;
+    height: 90%;
+}
+
+
+  
