add titiles to several places; fix border of forum creation page; css forum search button

--- a/CSCI150_Project_Pages/mainStyleSheet.css
+++ b/CSCI150_Project_Pages/mainStyleSheet.css
@@ -6,6 +6,14 @@
     font-family: Arial;
 }
 
+.centerText{
+	text-align:center;
+}
+
+h1{
+	color:red;
+	text-align:center;
+}
 body {
     margin: 5px;
     background-color: white;
