--- a/CSCI150_Project_Pages/mainStyleSheet.css
+++ b/CSCI150_Project_Pages/mainStyleSheet.css
@@ -6,6 +6,19 @@
     font-family: Arial;
 }
 
+button {
+    border: none;
+    color: white;
+    padding: 5px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 1px 1px;
+    cursor: pointer;
+    background-color: #1154e6;
+}
+
 .centerText{
 	text-align:center;
 }
@@ -853,17 +866,15 @@ img {
         cursor: pointer;
         background-color: #1154e6;
     }
-    .button {
-   	border: none;
+     #element.style {
+	width: 50;
+    	height: 30;
+    	margin-top: 1%;
     	color: white;
-    	padding: 5px 15px;
-   	text-align: center;
-    	text-decoration: none;
-    	display: inline-block;
-    	font-size: 16px;
-    	margin: 1px 1px;
-    	cursor: pointer;
     	background-color: #1154e6;
+    	display: inline-block;
+    	cursor: pointer;
+    	text-align: center;
      }
 }
 
