--- a/CSCI150_Project_Pages/mainStyleSheet.css
+++ b/CSCI150_Project_Pages/mainStyleSheet.css
@@ -126,11 +126,11 @@ table, th, td {
 /* Page Elements CSS*/
 
 .logoLogin {
-    /* based on a 4:3 image ratio*/
+    /* based on a 5:1 image ratio*/
     display: block; 
-    margin: 10px auto 50px auto;
-    width: 50%;
-    height: 10%;
+    width: 500px;
+    height: 100px;
+    margin: 10px auto;
 }
 
 .homePageContent {
@@ -212,6 +212,11 @@ form {
     width: 400px;
     margin: auto;
     padding: 5px;
+}
+
+.myTextArea {
+    width: 100%;
+    height: 200px;
 }
 
 .loginBox {
@@ -728,11 +733,11 @@ img {
 
     /* Page Elements CSS*/
     .logoLogin {
-        /* based on a 4:3 image ratio*/
+        /* based on a 5:1 image ratio*/
         display: block;
-        margin: 10px auto 50px auto;
-        width: 50%;
-        height: 10%;
+        width: 250px;
+        height: 50px;
+        margin: 10px auto;
     }
 
     .homePageContent {
@@ -811,9 +816,14 @@ img {
     form {
         background-color: #b3b3b3;
         border: 1px solid #8a8a8a;
-        width: 400px;
+        width: 300px;
         margin: auto;
         padding: 5px;
+    }
+
+    .myTextArea{
+        width: 100%;
+        height: 200px;
     }
 
     .loginBox {
@@ -828,7 +838,7 @@ img {
     .newUser {
         background-color: #b3b3b3;
         border: 1px solid #8a8a8a;
-        width: 400px;
+        width: 300px;
         margin: 20px auto;
         padding: 10px 5px 10px 5px;
     }
